--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,27 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <body>
+      <nav>
+        <h1>Navigation bar</h1>
+        <ul>
+          <li>Home</li>
+          <li>About</li>
+          <li>Contact</li>
+        </ul>
+      </nav>
+      <section>
+        <header>
+          <h1>Popular Web Browsers</h1>
+        </header>
+        <article style="display:none">
+          <h3></h3>
+          <img>
+          <div></div>
+        </article>
+      </section>
+      <footer>Copyright by Bogate Interfejsy Webowe.</footer>
+     <script src="main.js"></script>
+    </body>
   </body>
 </html>
